# ralph-orchestrator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  ralph.e2e.yml  ralph.yml
.agent/: memories.md  tasks.jsonl
.claude/agents/: code-assist.md
.ralph/specs/: README.md  beads-lite.spec.md  behavioral-verification.spec.md  behaviors.yaml  benchmark-harness.spec.md  benchmark-tasks.spec.md  benchmark-ux.spec.md  cli-adapters.spec.md  cli-config-overrides.spec.md  confession-loop-preset.spec.md  e2e-memory-robustness.spec.md  e2e-test-fixes.spec.md  (+13 more)
crates/ralph-telegram/: Cargo.toml  README.md
crates/ralph-telegram/src/: bot.rs  daemon.rs  handler.rs  lib.rs  service.rs
docs/: index.md
presets/: README.md  autoresearch.yml  code-assist.yml  debug.yml  index.json  pdd-to-code-assist.yml  research.yml  review.yml
scripts/: sync-embedded-files.sh
tasks/: event-isolation-e2e-tests.code-task.md
tests/: test_acp_adapter.py  test_acp_cli.py  test_acp_client.py  test_acp_config.py  test_acp_integration.py  test_acp_models.py  test_acp_orchestrator.py  test_acp_protocol.py  test_adapters.py  test_async_logger.py  test_completion_detection.py  test_config.py  test_context.py  test_integration.py  test_logging_config.py  test_metrics.py  test_orchestrator.py  test_output.py  test_output_formatters.py  test_performance_simple.py  test_qchat_adapter.py  test_qchat_integration.py  test_qchat_message_queue.py  test_security.py  test_verbose_logger.py  test_web_auth.py  test_web_database.py  test_web_rate_limit.py  test_web_server.py
(+395 files in other folders)
